--- a/ui/index.html
+++ b/ui/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>PeerJS - Video chat example</title>
+  <title>Using PeerJS</title>
   <link rel="stylesheet" href="/style.css">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
   <script type="text/javascript" src="http://cdn.peerjs.com/0.3/peer.js"></script>
@@ -105,7 +105,7 @@
 
       <!-- Steps -->
       <div class="pure-u-1-3">
-        <h2>PeerJS Video Chat</h2>
+        <h2>Culinarian POC, Video Chat</h2>
 
         <!-- Get local audio/video stream -->
         <div id="step1">
