--- a/ui/index.html
+++ b/ui/index.html
@@ -118,11 +118,11 @@
 
         <!-- Make calls to others -->
         <div id="step2">
-          <p>Your id: <span id="my-id">...</span></p>
+          <p>Your phone number: <span id="my-id">...</span></p>
           <p>Share this id with others so they can call you.</p>
           <h3>Make a call</h3>
           <div class="pure-form">
-            <input type="text" placeholder="Call user id..." id="callto-id">
+            <input type="text" placeholder="Call phone number..." id="callto-id">
             <a href="#" class="pure-button pure-button-success" id="make-call">Call</a>
           </div>
         </div>
