--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
   <title>Using PeerJS</title>
   <link rel="stylesheet" href="/style.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdn.peerjs.com/0.3/peer.js"></script>
+  <script type="text/javascript" src="/lib/peerjs.js"></script>
   <script>
 
     // Compatibility shim
